--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metodología en Espiral - Cuentas por Cobrar WEB</title>
+    <title>Metodología en Espiral - Victor Jerez</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -165,7 +165,7 @@
                 <!-- Iteración 6 -->
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3 class="title is-4 has-text-primary">Sexta Iteración: Despliegue y Retroalimentación Continua</h3>
+                        <h3 class="title is-4 has-text-primary"><strong>Para el Futuro</strong>Sexta Iteración: Despliegue y Retroalimentación Continua</h3>
                         <p><strong>Objetivos:</strong></p>
                         <ul>
                             <li>Desplegar el sistema en un entorno productivo.</li>
@@ -217,7 +217,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>Metodología en Espiral</strong> aplicada al desarrollo del sistema de Cuentas por Cobrar WEB.
+                <strong>Metodología en Espiral</strong> Desarrollado por Victor Jerez
             </p>
             <p>
                 Proyecto desarrollado utilizando un enfoque iterativo e incremental con evaluación continua de riesgos.
