--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>Metodología en Espiral</strong> Desarrollado por Victor Jerez
+                Metodología en Espiral || Desarrollado por Victor Jerez
             </p>
             <p>
                 Proyecto desarrollado utilizando un enfoque iterativo e incremental con evaluación continua de riesgos.
